--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,42 @@
-telebot == 0.0.5
-telegram-menu == 2.1.3
-telegraph == 2.2.0
-Telethon == 1.35.0
-pillow == 10.4.0
-pillow-avif-plugin == 1.4.6
-insta-scrape == 2.1.2
-instaloader == 4.12
-PyQRCode == 1.2.1
-yt-dlp == 2024.8.6
-python-dotenv == 1.0.0
+anyio==4.4.0
+APScheduler==3.10.4
+beautifulsoup4==4.12.3
+Brotli==1.1.0
+cachetools==5.3.3
+certifi==2024.8.30
+charset-normalizer==3.3.2
+emoji==2.12.1
+h11==0.14.0
+httpcore==0.17.3
+httpx==0.24.1
+idna==3.10
+insta-scrape==2.1.2
+instaloader==4.12
+mutagen==1.47.0
+pillow==10.4.0
+pillow-avif-plugin==1.4.6
+pyaes==1.6.1
+pyasn1==0.6.1
+pycryptodomex==3.20.0
+pypng==0.20220715.0
+PyQRCode==1.2.1
+pyTelegramBotAPI==4.22.1
+python-dotenv==1.0.1
+python-telegram-bot==20.4
+pytz==2024.2
+requests==2.32.3
+rsa==4.9
+six==1.16.0
+sniffio==1.3.1
+soupsieve==2.6
+telebot==0.0.5
+telegram_menu==2.1.3
+telegraph==2.2.0
+Telethon==1.35.0
+typing_extensions==4.12.2
+tzdata==2024.1
+tzlocal==5.2
+urllib3==2.2.3
+validators==0.34.0
+websockets==13.0.1
+yt-dlp==2024.8.6
